--- a/index.html
+++ b/index.html
@@ -4,16 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CAR MUSC</title>
 </head>
 <body>
     <!-- header -->
     <header>
         <div>
             <nav>
-                
+                <ul>
+
+                    <li>
+                        <a href="">Главная</a>
+                    </li>
+
+                    <li>
+                        <a href="">Оклейка автомобилей</a>
+                    </li>
+
+                    <li>
+                        <a href="">Детейлинг автомобилей</a>
+                    </li>
+
+                    <li>
+                        <a href="">Галерея работ</a>
+                    </li> 
+
+                </ul>
             </nav>
         </div>
     </header>
+    <!-- main -->
+    <main>
+        <!-- hero -->
+        <section class="hero">
+            <h1>CAR MUSC</h1>
+        </section>
+    </main>
 </body>
 </html>
