--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
         <!-- hero -->
         <section class="hero">
             <h1>CAR MUSC</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vitae orci urna amet penatibus.</p>
+            <button>Наши услуги</button>
         </section>
     </main>
 </body>
