--- a/index.html
+++ b/index.html
@@ -37,9 +37,39 @@
     <main>
         <!-- hero -->
         <section class="hero">
-            <h1>CAR MUSC</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vitae orci urna amet penatibus.</p>
-            <button>Наши услуги</button>
+            <div>
+
+                <h1>CAR MUSC</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vitae orci urna amet penatibus.</p>
+                <button>Наши услуги</button>
+
+            </div>
+            <div>
+
+                <ul>
+                    <li>
+                        <h3>адрес:</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit </p>
+                    </li>
+                </ul>
+
+                <ul>
+                    <li>
+                        <h3>телефон:</h3>
+                        <p>8 (812) 123-45-67</p>
+                        <p>8-911-123-45-67</p>
+                    </li>
+                </ul>
+
+                <ul>
+                    <li>
+                        <h3>Режим работы:</h3>
+                        <p>пн-пт : 10:00 - 20:00</p>
+                        <p>сб-вск : 12:00 - 20:00</p>
+                    </li>
+                </ul>
+
+            </div>
         </section>
     </main>
 </body>
