--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CAR MUSC</title>
+    <title>Акватерапия RitmStyle</title>
 </head>
 <body>
     <!-- header -->
@@ -14,20 +14,36 @@
                 <ul>
 
                     <li>
+                        <img src="/image/Group 1.png" alt="logo">
+                    </li>
+
+                    <li>
                         <a href="">Главная</a>
                     </li>
 
                     <li>
-                        <a href="">Оклейка автомобилей</a>
+                        <a href="">Сеансы</a>
                     </li>
 
                     <li>
-                        <a href="">Детейлинг автомобилей</a>
+                        <a href="">Отзывы</a>
                     </li>
 
                     <li>
-                        <a href="">Галерея работ</a>
+                        <a href="">Контакты</a>
                     </li> 
+
+                    <li>
+                        <a href="">Новости</a>
+                    </li>
+
+                    <li>
+                        <a href="">Обо мне</a>
+                    </li>
+
+                    <li>
+                        <a href="">Блог</a>
+                    </li>
 
                 </ul>
             </nav>
@@ -38,36 +54,9 @@
         <!-- hero -->
         <section class="hero">
             <div>
-
-                <h1>CAR MUSC</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vitae orci urna amet penatibus.</p>
-                <button>Наши услуги</button>
-
-            </div>
-            <div>
-
-                <ul>
-                    <li>
-                        <h3>адрес:</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit </p>
-                    </li>
-                </ul>
-
-                <ul>
-                    <li>
-                        <h3>телефон:</h3>
-                        <p>8 (812) 123-45-67</p>
-                        <p>8-911-123-45-67</p>
-                    </li>
-                </ul>
-
-                <ul>
-                    <li>
-                        <h3>Режим работы:</h3>
-                        <p>пн-пт : 10:00 - 20:00</p>
-                        <p>сб-вск : 12:00 - 20:00</p>
-                    </li>
-                </ul>
+                
+                <p>Укрепление здоровья</p>
+                <h1>Акватерапия RitmStyle</h1>
 
             </div>
         </section>
