--- a/index.html
+++ b/index.html
@@ -13,45 +13,45 @@
         <div class="container">
             <div>
                 <nav class="nav-flex">
-                    <ul>
+                    <ul class="site-nav list">
 
-                        <li>
+                        <li class="item">
                             <img width="60" src="./image/Group 1.png" alt="logo">
                         </li>
 
-                        <li>
-                            <a href="">Главная</a>
+                        <li class="item">
+                            <a class="link" href="">Главная</a>
                         </li>
 
-                        <li>
-                            <a href="">Сеансы</a>
+                        <li class="item">
+                            <a class="link" href="">Сеансы</a>
                         </li>
 
-                        <li>
-                            <a href="">Отзывы</a>
+                        <li class="item">
+                            <a class="link" href="">Отзывы</a>
                         </li>
 
-                        <li>
-                            <a href="">Контакты</a>
+                        <li class="item">
+                            <a class="link" href="">Контакты</a>
                         </li> 
 
-                        <li>
-                            <a href="">Новости</a>
+                        <li class="item">
+                            <a class="link" href="">Новости</a>
                         </li>
 
-                        <li>
-                            <a href="">Обо мне</a>
+                        <li class="item">
+                            <a class="link" href="">Обо мне</a>
                         </li>
 
-                        <li>
-                            <a href="">Блог</a>
+                        <li class="item">
+                            <a class="link" href="">Блог</a>
                         </li>
 
+                        <li class="item">
+                            <button>Записаться на сеанс</button>
+                        </li>
                     </ul>
                 </nav>
-            </div>
-            <div>
-                <button>Записаться на сеанс</button>
             </div>
         </div>
     </header>
