--- a/index.html
+++ b/index.html
@@ -11,48 +11,43 @@
     <!-- header -->
     <header>
         <div class="container">
-            <div>
                 <nav class="nav-flex">
+                    <img class="logo" width="60" src="./image/Group 1.png" alt="logo">
                     <ul class="site-nav list">
 
                         <li class="item">
-                            <img width="60" src="./image/Group 1.png" alt="logo">
+                            <a class="header-link link" href="">Главная</a>
                         </li>
 
                         <li class="item">
-                            <a class="link" href="">Главная</a>
+                            <a class="header-link link" href="">Сеансы</a>
                         </li>
 
                         <li class="item">
-                            <a class="link" href="">Сеансы</a>
+                            <a class="header-link link" href="">Отзывы</a>
                         </li>
 
                         <li class="item">
-                            <a class="link" href="">Отзывы</a>
-                        </li>
-
-                        <li class="item">
-                            <a class="link" href="">Контакты</a>
+                            <a class="header-link link" href="">Контакты</a>
                         </li> 
 
                         <li class="item">
-                            <a class="link" href="">Новости</a>
+                            <a class="header-link link" href="">Новости</a>
                         </li>
 
                         <li class="item">
-                            <a class="link" href="">Обо мне</a>
+                            <a class="header-link link" href="">Обо мне</a>
                         </li>
 
                         <li class="item">
-                            <a class="link" href="">Блог</a>
+                            <a class="header-link link" href="">Блог</a>
                         </li>
 
                         <li class="item">
-                            <button>Записаться на сеанс</button>
+                            <button class="button-header">Записаться на сеанс</button>
                         </li>
                     </ul>
                 </nav>
-            </div>
         </div>
     </header>
     <!-- main -->
