--- a/index.html
+++ b/index.html
@@ -43,10 +43,8 @@
                             <a class="header-link link" href="">Блог</a>
                         </li>
 
-                        <li class="item">
-                            <button class="button-header">Записаться на сеанс</button>
-                        </li>
                     </ul>
+                    <button class="button-header" type="button">Записаться на сеанс</button>
                 </nav>
         </div>
     </header>
