--- a/index.html
+++ b/index.html
@@ -53,12 +53,9 @@
         <!-- hero -->
         <section class="hero">
             <div class="container">
-                    <div>
-                        
-                        <p>Укрепление здоровья</p>
-                        <h1>Акватерапия RitmStyle</h1>
 
-                    </div>
+                        <p>Укрепление здоровья</p>
+                        <h1 class="decision">Акватерапия RitmStyle</h1>
             
             </div>
         </section>
